[package]
name = "cometbft-playrgound"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.5", features = ["borsh-derive", "bytes", "derive"] }
# cnidarium = "0.83.0"
eyre = "0.6.12"
hex = "0.4.3"
jmt = "0.11.0"
parking_lot = "0.12.3"
tendermint = { version = "0.40.1", features = ["secp256k1"] }
tendermint-abci = "0.40.1"
tendermint-config = "0.40.1"
tendermint-proto = "0.40.1"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
